--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,12 +32,24 @@
     "type": "git",
     "url": "https://github.com/shuTwT/astro-twikoo"
   },
+  "dependencies": {
+    "blueimp-md5": "^2.19.0",
+    "jsdom":"^22.1.0",
+    "@fortawesome/fontawesome-free": "^5.15.4"
+  },
   "peerDependencies": {
     "@nanostores/vue": "^0.10.0",
-    "jsdom":"^22.1.0",
     "nanostores": "^0.9.4",
     "owo":"^1.0.2",
     "prismjs":"^1.29.0",
     "vue":">=3.3.1"
+  },
+  "peerDependenciesMeta": {
+    "prismjs":{
+        "optional": true
+    },
+    "owo":{
+        "optional": true
+    }
   }
 }
