--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "name": "astro-twikoo",
   "private": "true",
   "repository": "git@github.com:shuTwT/astro-twikoo.git",
   "author": "shu <1324073644@qq.com>",
@@ -9,9 +8,9 @@
     "dev": "pnpm run --filter demo dev",
     "buil": "pnpm run --filter core build",
     "build": "pnpm run -C internal/build start",
-    "clean":"pnpm run clean:dist",
-    "clean:dist":"rimraf dist",
-    "stub":"pnpm run -r --parallel stub"
+    "clean": "pnpm run clean:dist",
+    "clean:dist": "rimraf dist",
+    "stub": "pnpm run -r --parallel stub"
   },
   "devDependencies": {
     "@astro-twikoo/core": "workspace:*",
@@ -21,6 +20,7 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@nanostores/vue": "^0.10.0",
     "@vitejs/plugin-vue": "^4.4.0",
+    "astro-twikoo": "workspace:*",
     "blueimp-md5": "^2.19.0",
     "element-plus": "^2.4.2",
     "gulp": "^4.0.2",
@@ -30,6 +30,7 @@
     "owo": "^1.0.2",
     "prismjs": "^1.29.0",
     "rollup-plugin-visualizer": "^5.9.2",
+    "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.16.7",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.5.0",
