--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,4 +2,5 @@
     "compilerOptions": {
         "types": ["element-plus/global"]
     },
+    "references": [{"path": "./packages/marked/tsconfig.json"}]
 }
