--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@astro-twikoo/core": "workspace:*",
     "@astro-twikoo/locale": "workspace:*",
+    "@astro-twikoo/marked":"workspace:*",
     "@cloudbase/cli": "^1.9.5",
     "@cloudbase/js-sdk": "^1.7.1",
     "@fortawesome/fontawesome-free": "^5.15.4",
