--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,10 +35,12 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@vant/touch-emulator":"^1.4.0",
     "blueimp-md5": "^2.19.0",
-    "element-plus":"^2.4.2",
     "jsdom":"^22.1.0",
-    "primevue":"^3.41.0"
+    "element-plus": "^2.4.2",
+    "vant":"^4.8.0",
+    "@vueuse/core":"^9.13.0"
   },
   "peerDependencies": {
     "@nanostores/vue": "^0.10.0",
