--- a/packages/core/jsconfig.json
+++ b/packages/core/jsconfig.json
@@ -1,5 +1,9 @@
 {
     "compilerOptions": {
+        "noEmit": false,
+        "emitDeclarationOnly": true,
+        "declaration": true,
+        "declarationDir": "dist",
         "types": ["unplugin-vue-macros/macros-global"]
     },
     "vueCompilerOptions": {
