--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@cloudbase/js-sdk": "^1.7.1",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@nanostores/vue": "^0.10.0",
+    "@types/node":"^20.9.4",
     "@vitejs/plugin-vue": "^4.4.0",
+    "@vue-macros/volar":"^0.17.3",
     "astro": "^3.4.3",
     "astro-twikoo": "workspace:*",
     "blueimp-md5": "^2.19.0",
