--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -1,5 +1,8 @@
 {
-    "extends":"../tsconfig.base.json",
-    "compilerOptions": {},
-    "include": ["src"]
+    "extends":"astro/tsconfigs/strictest",
+    "compilerOptions": {
+        "moduleResolution": "Bundler",
+        "baseUrl": ".",
+    },
+    "include": ["src"],
 }
