--- a/packages/astro-twikoo/package.json
+++ b/packages/astro-twikoo/package.json
@@ -18,7 +18,7 @@
     "scripts": {
       "build": "tsc --noEmit"
     },
-    "keywords": ["twikoo","comment","astro","vue"],
+    "keywords": ["twikoo","comment","astro","comment-system","vue"],
     "files": ["src","*.d.ts"],
     "author": "",
     "license": "MIT",
