--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@types/node": "^20.9.4",
     "@vitejs/plugin-vue": "^4.4.0",
     "astro": "^3.4.3",
-    "astro-twikoo": "workspace:*",
     "blueimp-md5": "^2.19.0",
     "element-plus": "^2.4.2",
     "jsdom": "^22.1.0",
@@ -29,6 +28,7 @@
     "nanostores": "^0.9.4",
     "prismjs": "^1.29.0",
     "tsup": "^7.2.0",
+    "twikoo-astro": "workspace:*",
     "typescript": "^5.0.4",
     "vite": "^4.5.0",
     "vue": "^3.3.0",
