--- a/packages/twikoo-astro/package.json
+++ b/packages/twikoo-astro/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "astro-twikoo",
+    "name": "twikoo-astro",
     "version": "1.0.0",
     "description": "",
     "main": "./src/main.js",
@@ -24,7 +24,7 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/shuTwT/astro-twikoo"
+        "url": "https://github.com/shuTwT/twikoo-astro"
       },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.4",
