--- a/demo/package.json
+++ b/demo/package.json
@@ -10,7 +10,10 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
+        "@astrojs/node":"^6.0.0",
         "@astrojs/vue":"^3.0.4",
+        "remark-gemoji":"^8.0.0",
+        "remark-gfm":"^4.0.0",
         "astro": "^3.4.3",
         "vue":"^3.3.8"
     }
