--- a/package.json
+++ b/package.json
@@ -14,24 +14,9 @@
     "stub": "pnpm run -r --parallel stub"
   },
   "devDependencies": {
-    "@cloudbase/cli": "^1.9.5",
-    "@cloudbase/js-sdk": "^1.7.1",
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@nanostores/vue": "^0.10.0",
-    "@types/node": "^20.9.4",
-    "@vitejs/plugin-vue": "^4.4.0",
-    "astro": "^3.4.3",
-    "blueimp-md5": "^2.19.0",
-    "element-plus": "^2.4.2",
-    "jsdom": "^22.1.0",
-    "mitt": "^3.0.1",
-    "nanostores": "^0.9.4",
-    "prismjs": "^1.29.0",
     "tsup": "^7.2.0",
     "twikoo-astro": "workspace:*",
     "typescript": "^5.0.4",
-    "vite": "^4.5.0",
-    "vue": "^3.3.0",
-    "vue-i18n": "^9.6.5"
+    "vite": "^4.5.0"
   }
 }
